Fixes for the homepage boxes not being aligned

--- a/trianglesandwiches.com/trianglesandwiches.css
+++ b/trianglesandwiches.com/trianglesandwiches.css
@@ -131,6 +131,8 @@ h4 {
 }
 
 #content h2 {
+	border-bottom: 1px solid #AAA7A4;
+	padding-bottom: 15px;
 	font-weight: bold;
 	font-size: 12px;
 }
@@ -154,24 +156,22 @@ h4 {
 
 
 .portfolioimages {
-	border-top: 1px solid #AAA7A4;
 	float: left;
 	margin: 0 0 14px 0;
 	width: 770px;
 }
 
 #featuredone {
-	width: 420px;
 	float: left;
-	padding: 5px;
-]
+}
 
 #featuredtwo {
-	width: 420px;
 	float: right;
-	padding: 5px;
-]
+}
 
+.intro {
+	margin-bottom: 50px;
+}
 
 /***     Footer     ***/
 #footer {
